--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
+# Audio assets
+audio/*.wav
+
+# Local settings
+settings.json
+
+# Python artifacts
 __pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+*.egg-info/
+dist/
+build/
+
+# OS files
+.DS_Store
+Thumbs.db
+
